<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/currency_char_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/currency_char_code_string" />

    <TextView
        android:id="@+id/currency_nominal"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/currency_nominal_string" />

    <TextView
        android:id="@+id/currency_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:elegantTextHeight="true"
        android:maxLines="3"
        android:text="@string/currency_name_string"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/currency_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:gravity="start"
        android:text="@string/currency_value_string" />

</LinearLayout>
