<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context="space.korolev.exchangecurrency.MainActivity">


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tv_setcur"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:inputType="numberDecimal"
            android:hint="@string/editHint"/>

        <Button
            android:id="@+id/count"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:onClick="onClickCountData"
            android:text="@string/count"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cur"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:hint="@string/valHint"/>

        <Button
            android:id="@+id/refresh"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:onClick="onClickRefreshData"
            android:text="@string/refresh"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>